--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,17 @@ h1 {
 	font-weight: bolder;
 }
 
+h3 {
+	font-size: 25px;
+	color: #26418f;
+	margin: 0 0 5% 0;
+}
+
+header {
+	color: #8e99f3;
+	margin: 1% 0;
+}
+
 #topLine {
 	height: 3px;
 	background-color: #5c6bc0;
@@ -51,15 +62,16 @@ h1 {
 }
 
 #downArrow {
-	margin: 10% 0;
+	margin: 10% 0 9% 0;
 }
 
 /*--------*/
 
 #portfolioSection {
 	width: 100%;
-/*	border: solid 1px black;
-*/}
+	margin: 0 0 10% 0;
+/*	border: solid 1px black;*/
+}
 
 .portRow {
 	display: flex;
@@ -75,4 +87,24 @@ h1 {
 	margin: 2% 0;
 	border-radius: 6px;
 }
+
+/*--------*/
+
+#skillsSection {
+	width: 100%;
+	margin: 0 0 10% 0;
+	display: flex;
+	justify-content: space-between;
+}
+
+.skills {
+	width: 47%;
+	/*border: solid 1px black;*/
+}
+
+.soft {
+	margin: 0 0 10% 0;
+}
+
+
 
