--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ h3 {
 
 header {
 	color: #8e99f3;
-	margin: 1% 0;
+	margin: 5% 0;
 }
 
 #topLine {
@@ -106,5 +106,19 @@ header {
 	margin: 0 0 10% 0;
 }
 
+/*--------*/
 
+#ftSection {
+	width: 100%;
+	/*border: solid 1px black;*/
+}
+
+#featured {
+	color: white;
+	text-align: center;
+	background-color: #5c6bc0;
+	width: 100%;
+	padding: 20% 0;
+	border-radius: 6px;
+}
 
