--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,13 +14,18 @@ header {
 	margin: 5% 0;
 }
 
+footer {
+	background-color: #26418f;
+	padding: 3% 0;
+}
+
 #topLine {
 	height: 3px;
 	background-color: #5c6bc0;
 	color: pink;
 }
 
-#container {
+.container {
 	font-size: 20px;
 	font-family: 'Source Code Pro', monospace;
 	color: #5c6bc0;
@@ -110,6 +115,7 @@ header {
 
 #ftSection {
 	width: 100%;
+	margin: 0 0 10% 0;
 	/*border: solid 1px black;*/
 }
 
@@ -139,5 +145,22 @@ header {
 
 #philosophySection {
 	width: 85%;
+	margin: 0 0 10% 0;
 /*	border: solid 1px black;
 */}
+
+/*--------*/
+
+#fInfo {
+	color: white;
+	width: 40%;
+	margin: 3% 0;
+}
+
+#suffix {
+	color: white;
+	width: 80%;
+	margin: 3% 0;
+	display: flex;
+	justify-content: space-between;
+}
