finished linking to external sources

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,6 +134,12 @@ footer {
 	border-radius: 6px;
 }
 
+#ftSummary {
+	font-size: 15px;
+	line-height: 20px;
+	width: 60%;
+}
+
 /*--------*/
 
 #socialSection {
