--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,8 @@ header {
 }
 
 footer {
-	background-color: #26418f;
+	/*background-color: #26418f;*/
+	background-image: linear-gradient(45deg,  #26418f, #ec407a);
 	padding: 3% 0;
 }
 
@@ -28,6 +29,7 @@ footer {
 #topLine {
 	height: 3px;
 	background-color: #5c6bc0;
+	background-image: linear-gradient(95deg,  #26418f, #ec407a);
 	color: pink;
 }
 
@@ -94,12 +96,12 @@ footer {
 
 .project {
 	text-align: center;
-	background-color: #5c6bc0;
-	color: white;
 	width: 30%;
 	padding: 8% 0;
 	margin: 2% 0;
-	border-radius: 6px;
+	border: 2px solid transparent;
+	border-image: url('../images/smoothG.png') 30 stretch;
+	/*transition: 3s;*/
 }
 
 /*--------*/
@@ -129,12 +131,11 @@ footer {
 }
 
 #featured {
-	color: white;
 	text-align: center;
-	background-color: #5c6bc0;
 	width: 100%;
 	padding: 20% 0;
-	border-radius: 6px;
+	border: 2px solid transparent;
+	border-image: url('../images/gradient.png') 30 stretch;
 }
 
 #ftSummary {
