removed bg boxes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,7 +216,7 @@ footer {
 
 
 
-#gradientBlock1 {
+/*#gradientBlock1 {
 	width: 100%;
 	padding: 20% 0;
 	background-image: linear-gradient(132deg, #ec407a, #5c6bc0);
@@ -236,4 +236,4 @@ footer {
 	bottom: -100px;
 	right: 0;
 	transform: rotate(-2deg);
-}
+}*/
