--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -15,6 +15,8 @@
 	}
 
 	a {
+		font-size: 1em;
+		line-height: 2em;
 		text-decoration: none;
 	}
 
@@ -24,7 +26,6 @@
 	}
 
 	footer {
-		/*background-color: #26418f;*/
 		background-image: linear-gradient(45deg,  #26418f, #ec407a);
 		padding: 3% 0;
 	}
@@ -140,7 +141,7 @@
 	}
 
 	#ftSummary {
-		font-size: .45em;
+		font-size: .5em;
 		line-height: 1em;
 		width: 100%;
 	}
@@ -148,14 +149,11 @@
 	/*--------*/
 
 	#socialSection {
-		width: 100%;
-		margin: 0 0 10% 0;
-		display: flex;
-		justify-content: space-between;
+		display: none;
 	}
 
-	.social {
-		width: 47%;
+	#socialHeader {
+		display: none;
 	}
 
 	/*--------*/
@@ -169,17 +167,22 @@
 	/*--------*/
 
 	#fInfo {
+		font-size: 1em;
+		line-height: 2em;
 		color: white;
-		width: 50%;
+		width: 100%;
 		margin: 3% 0;
 	}
 
 	#suffix {
 		color: white;
-		width: 80%;
+		width: 100%;
 		margin: 3% 0;
-		display: flex;
-		justify-content: space-between;
+		display: inline;
+	}
+
+	.marginTop5em {
+		margin-top: 5em;
 	}
 
 	/*--------*/
