--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -102,6 +102,14 @@
 		border-image: url('../images/smoothG.png') 30 stretch;
 		/*transition: 3s;*/
 	}
+	
+	.parallax-bg {
+	    background-image: url('../images/paraBG.png');
+	    background-attachment: fixed;
+	    background-size: 100%;
+	    background-position: center 0;
+	}
+
 
 	/*--------*/
 
