--- a/assets/css/parallax.css
+++ b/assets/css/parallax.css
@@ -1,3 +1,12 @@
+
+/*GENERAL
+//------------------------//*/
+.parallax {
+	z-index: -1;
+}
+
+/*ABOUT
+//------------------------//*/
 #gradientBlock1 {
 	width: 100%;
 	padding: 20% 0;
@@ -9,7 +18,7 @@
 	transform: rotate(5deg);
 }
 
-#pinkSquare1 {
+#greenSquare1 {
 	width: 10%;
 	height: 300px;
 	background-color: #6cc71c;
@@ -17,5 +26,53 @@
 	position: absolute;
 	bottom: -100px;
 	right: 0;
+	transform: rotate(-2deg);
+}
+
+/*SKILLS
+//------------------------//*/
+#communication-bg {
+	background-color: #6cc71c;
+	opacity: 0.2;
+	opacity: 0.2;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	transform: rotate(-2deg);
+}
+
+#organization-bg {
+	background-color: #6cc71c;
+	opacity: 0.2;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	transform: rotate(2deg);
+}
+
+#collaboration-bg {
+	background-color: #6cc71c;
+	opacity: 0.2;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	transform: rotate(-2deg);
+}
+
+#design-bg {
+	background-color: #6cc71c;
+	opacity: 0.2;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	transform: rotate(2deg);
+}
+
+#time-bg {
+	background-color: #6cc71c;
+	opacity: 0.2;
+	width: 100%;
+	height: 100%;
+	position: absolute;
 	transform: rotate(-2deg);
 }
