--- a/assets/css/parallax.css
+++ b/assets/css/parallax.css
@@ -10,7 +10,8 @@
 #gradientBlock1 {
 	width: 100%;
 	padding: 20% 0;
-	background-image: linear-gradient(132deg, #6cc71c, #233d8b);
+	background-color: #0cbaba;
+	background-image: linear-gradient(315deg, #0cbaba 0%, #380036 74%);
 	opacity: 0.1;
 	position: absolute;
 	top: -70px;
@@ -21,7 +22,7 @@
 #greenSquare1 {
 	width: 10%;
 	height: 300px;
-	background-color: #6cc71c;
+	background-color: #0cbaba;
 	opacity: 0.2;
 	position: absolute;
 	bottom: -100px;
@@ -32,7 +33,7 @@
 /*SKILLS
 //------------------------//*/
 #communication-bg {
-	background-color: #6cc71c;
+	background-color: #0cbaba;
 	opacity: 0.2;
 	opacity: 0.2;
 	width: 100%;
@@ -42,7 +43,7 @@
 }
 
 #organization-bg {
-	background-color: #6cc71c;
+	background-color: #0cbaba;
 	opacity: 0.2;
 	width: 100%;
 	height: 100%;
@@ -51,7 +52,7 @@
 }
 
 #collaboration-bg {
-	background-color: #6cc71c;
+	background-color: #0cbaba;
 	opacity: 0.2;
 	width: 100%;
 	height: 100%;
@@ -60,7 +61,7 @@
 }
 
 #design-bg {
-	background-color: #6cc71c;
+	background-color: #0cbaba;
 	opacity: 0.2;
 	width: 100%;
 	height: 100%;
@@ -69,7 +70,7 @@
 }
 
 #time-bg {
-	background-color: #6cc71c;
+	background-color: #0cbaba;
 	opacity: 0.2;
 	width: 100%;
 	height: 100%;
